fix: default align in title-buttons-work-container

--- a/ts/src/app/app.component.scss
+++ b/ts/src/app/app.component.scss
@@ -327,12 +327,12 @@ svg#clouds {
 .content-work-details{
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
 
   .title-buttons-work-container{
     display: flex;
-    align-items: center;
-    gap: 1rem;
+    align-items: baseline;
+    gap: 2rem;
 
 
     h2{
